--- a/Everstox.API.IntegrationTests/Static_Data/Shops.resx
+++ b/Everstox.API.IntegrationTests/Static_Data/Shops.resx
@@ -123,4 +123,7 @@
   <data name="TestShop_Id" xml:space="preserve">
     <value>4fa5a0aa-8f20-47b7-b95f-4af40d8797ec</value>
   </data>
+  <data name="Xentral_Id" xml:space="preserve">
+    <value>f36ab4c7-c64d-4f9e-aae3-ad834175b313</value>
+  </data>
 </root>
