--- a/Everstox.API.IntegrationTests/Static_Data/Shops.resx
+++ b/Everstox.API.IntegrationTests/Static_Data/Shops.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="IV_Shop_Id" xml:space="preserve">
+    <value>933534b8-76c8-4fe1-8cec-700faac8098e</value>
+  </data>
   <data name="QA1Shop_Id" xml:space="preserve">
     <value>8898caa8-7264-4952-b72b-d6e52b5378ab</value>
   </data>
